spade-tests/src/snapshots/spade_tests__integration__unsafe_tests__double_unsafe_block_gets_hint.snap
---
source: spade-tests/src/integration.rs
---
unsafe fn method() {}

fn test() {
    unsafe {
        unsafe {
            method();
        }
    }
}


warning: Unnecessary unsafe block
  ┌─ testinput:5:16
  │  
5 │           unsafe {
  │ ╭────────────────^
6 │ │             method();
7 │ │         }
  │ ╰─────────^
  │  
  = note: This block is already in unsafe context
