spade-tests/src/snapshots/spade_tests__integration__unsafe_tests__unsafe_invocation_needs_block.snap
---
source: spade-tests/src/integration.rs
---
unsafe fn method() {}

fn test() {
    method();
}


error: You cannot call unsafe code in safe context
  ┌─ testinput:4:5
  │
4 │     method();
  │     ^^^^^^ This is missing an unsafe block
  │
  = Consider wrapping the code in an unsafe block
  │
4 │     unsafe { method() };
  │     +++++++++        ++
